--- a/package.json
+++ b/package.json
@@ -2,25 +2,27 @@
   "name": "flux-example",
   "version": "0.0.1",
   "description": "Simple flux how-to",
-  "main":    "js/app.js",
-  "author":  "Jonathan Morton",
+  "main": "js/app.js",
+  "author": "Jonathan Morton",
   "license": "MIT",
   "dependencies": {
-    "flux":          "^2.0.1",
+    "flux": "^2.0.1",
     "object-assign": "^2.0.0",
-    "dexie":         "^1.0.4"
+    "dexie": "^1.0.4"
   },
   "devDependencies": {
-    "beefy":      "^2.1.5",
+    "beefy": "^2.1.5",
     "browserify": "^6.2.0",
-    "envify":     "^3.0.0",
-    "watchify":   "^2.1.1",
-    "uglify-js":  "^2.4.20"
+    "envify": "^3.0.0",
+    "jest-cli": "^0.4.1",
+    "uglify-js": "^2.4.20",
+    "watchify": "^2.1.1"
   },
   "scripts": {
     "start": "watchify -o bundle.js -v -d js/app.js",
     "build": "browserify . -t [envify --NODE_ENV production] | uglifyjs -cm > bundle.min.js",
-    "serve": "beefy -o bundle.js -v -d --open --index app.html js/app.js 8765"
+    "serve": "beefy -o bundle.js -v -d --open --index app.html js/app.js 8765",
+    "test": "jest"
   },
   "browserify": {
     "transform": [
